<resources>
    <string name="app_name">Storage2</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="clear">CLEAR</string>
    <string name="send">SEND</string>
    <string name="comment">COMMENT</string>
</resources>
